--- a/Roles-Trainning-application/Views/Shared/_Layout.cshtml
+++ b/Roles-Trainning-application/Views/Shared/_Layout.cshtml
@@ -25,9 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="myPage" asp-action="Index">My Page</a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="myPage" asp-action="Index">My Page</a>
+                            </li>
+                        }
                     </ul>
                 </div>
                 <partial name="_LoginPartial" />
